Fix site from perfect pixel

--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <!-- FAQ -->
     <section class="faq section">
       <div class="container">
-        <div class="section__info">
-          <h2 class="section__title">Frequently Asked Questions</h2>
+        <div class="faq__section-info section__info">
+          <h2 class="faq__section-title section__title">Frequently Asked Questions</h2>
           <p class="section__description">Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.</p>
         </div>
 
@@ -175,7 +175,7 @@
           <div class="faq__accordion">
             <div class="accordion">
 
-              <section class="accordion__item accordion__item--open">
+              <section class="accordion__item">
                 <header class="accordion__item-header">
                   <h3 class="accordion__item-title">What is Bookmark?</h3>
                   <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
