Add subscription section

--- a/index.html
+++ b/index.html
@@ -212,26 +212,46 @@
                 <div class="accordion__item-content">
                   <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
                     ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula.</p>
-                </div>
-              </section>
+                  </div>
+                </section>
 
-              <section class="accordion__item">
-                <header class="accordion__item-header">
-                  <h3 class="accordion__item-title">What about other Chromium browsers?</h3>
-                  <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
-                    <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
-                  </button>
-                </header>
+                <section class="accordion__item">
+                  <header class="accordion__item-header">
+                    <h3 class="accordion__item-title">What about other Chromium browsers?</h3>
+                    <button class="accordion__item-toggler" type="button" aria-label="Accordion toggler">
+                      <svg class="accordion__item-toggler-icon" xmlns="http://www.w3.org/2000/svg" width="20" height="13" fill="none"><path stroke="currentColor" stroke-width="3" d="m2 2 8 8 8-8"/></svg>
+                    </button>
+                  </header>
 
-                <div class="accordion__item-content">
-                  <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                    ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                  <div class="accordion__item-content">
+                    <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                      ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                    </div>
+                  </section>
                 </div>
-              </section>
+              </div>
+
+              <a class="button button--blue" href="">More info</a>
+        </div>
+      </div>
+    </section>
+
+      <!-- SUBSCRIPTION -->
+    <section class="subscription">
+      <div class="container">
+        <div class="subscription__inner">
+          <p class="subscription__count-text">35,000+ already joined</p>
+          <h2 class="subscription__heading">Stay up-to-date with what we're doing</h2>
+
+          <form class="subscription__form" action="https://echo.htmlacademy.ru" method="post">
+
+            <div class="subscription__field-wrapper">
+              <input class="subscription__field" type="email" name="email" placeholder="Enter your email address" aria-label="Email" request>
+              <div class="subscription__error">Whoops, make sure it’s an email</div>
             </div>
-          </div>
 
-          <a class="button button--blue" href="">More info</a>
+            <button class="button button--red" type="submit">Contact Us</button>
+          </form>
         </div>
       </div>
     </section>
